--- a/home/miu/xorg/polybar/config.ini
+++ b/home/miu/xorg/polybar/config.ini
@@ -39,7 +39,7 @@ disabled = ${colors.red}
 [bar/top]
 ;monitor = ${env:MONITOR:HDMI-1}
 width = 100%
-height = 3%
+height = 5%
 radius = 6
 
 ; dpi = 96
@@ -71,7 +71,7 @@ font-2 = NotoSerif Nerd Font:size=12;3
 
 modules-left = xworkspaces
 modules-center = 
-modules-right = battery pulseaudio wlan eth xkeyboard date
+modules-right = battery pulseaudio wlan xkeyboard date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
