--- a/home/miu/xorg/polybar/config.ini
+++ b/home/miu/xorg/polybar/config.ini
@@ -88,10 +88,25 @@ type = internal/battery
 full-at = 99
 low-at = 20
 
-battery = AC
+battery = BAT0
+adapter = AC
 
 format-discharging = <ramp-capacity> <label-discharging>
-label-discharging =  %percentage%
+label-discharging = %percentage%%
+ramp-capacity-0 = 
+ramp-capacity-1 = 
+ramp-capacity-2 = 
+ramp-capacity-3 = 
+ramp-capacity-4 = 
+
+format-charging = <animation-charging> <label-charging>
+label-charging = %percentage%%
+animation-charging-0 = 
+animation-charging-1 = 
+animation-charging-2 = 
+animation-charging-3 = 
+animation-charging-4 = 
+animation-charging-framerate = 1000
 
 poll-interval = 5
 
