[add] backlight adjustment

--- a/home/miu/xorg/polybar/config.ini
+++ b/home/miu/xorg/polybar/config.ini
@@ -71,7 +71,7 @@ font-2 = NotoSerif Nerd Font:size=12;3
 
 modules-left = xworkspaces
 modules-center = 
-modules-right = battery pulseaudio wlan xkeyboard date
+modules-right = battery pulseaudio backlight wlan xkeyboard date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -81,7 +81,24 @@ enable-ipc = true
 ; wm-restack = i3
 ; override-redirect = true
 
+[module/backlight]
+type = internal/backlight
 
+card = intel_backlight
+use-actual-brightness = true
+
+poll-interval = 0
+
+enable-scroll = true
+scroll-interval = 5
+
+format = <ramp>  <label>
+label = %percentage%%
+ramp-0 = 󱩎
+ramp-1 = 󱩐
+ramp-2 = 󱩒
+ramp-3 = 󱩕
+ramp-4 = 󰛨
 
 [module/battery]
 type = internal/battery
@@ -108,7 +125,7 @@ animation-charging-3 = 
 animation-charging-4 = 
 animation-charging-framerate = 1000
 
-poll-interval = 5
+poll-interval = 60
 
 [module/systray]
 type = internal/tray
